better paths
